<resources>
    <string name="app_name">Kufsa</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="kufsa_logo">Kufsa logo</string>

    <!-- Navigation related strings -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_marketplace_title">Marketplace</string>
    <string name="nav_my_games_title">My Games</string>
    <string name="nav_my_account_title">My Account</string>
    <string name="todo">TODO</string>
    <string name="description">Description</string>
    <string name="details">Details</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- FAQ section text -->
    <string name="title_faq">FAQ</string>

    <!-- FAQ questions-->
    <string name="faq_q1_question">What is this app?</string>
    <string name="faq_q2_question">Who created this app?</string>
    <string name="faq_q3_question">What can I do in this app?</string>
    <string name="faq_q4_question">Can I pay for anything here?</string>

    <!-- FAQ answers-->
    <string name="faq_q1_answer">This app is an android project, used for managing board games.</string>
    <string name="faq_q2_answer">Two modest computer science students, trying to get a 100 grade:)</string>
    <string name="faq_q3_answer">You can create a personal user, browse a huge catalog of board games and post them for sale, under said user.</string>
    <string name="faq_q4_answer">No, we can not be responsible for any financial transactions, only allow you to post games for sale/ rent.</string>

    <!-- Account settings Titles -->
    <string name="title_activity_account_settings">Account Settings</string>
    <string name="Credentials_header">Credentials</string>
    <string name="password_title">Set up a new password</string>
    <string name="dark_mode_title">Toggle Dark Mode</string>
    <string name="report_issue_title">Report an issue or bug</string>
    <string name="password_description">Click Here to receive a password-reset email</string>
    <string name="dark_mode_description">Click Here to switch between dark mode and light mode</string>
    <string name="report_issue_description">Click Here to Inform us of any issue you\'ve encountered</string>
    <string name="enable_dark_mode">Dark mode enabled</string>
    <string name="disable_dark_mode">Dark mode disabled</string>
    <string name="action_button">Action button</string>
    <string name="reset_password_button">Reset password button</string>
    <string name="toggle_dark_mode_button_desc">Toggle dark mode description</string>
    <string name="report_button">Report Button</string>
    <string name="error_login_by_phone">You have logged in by phone! please login by email to Get password.</string>
    <string name="password_reset_email_sent">Password reset email successfully sent!</string>
    <string name="shared_prefs">sharedPrefs</string>
    <string name="is_dark_mode_on">isDarkModeOn</string>
    <string name="delete_account_title">Delete your account</string>
    <string name="delete_account_description">Click here to remove your account</string>
    <string name="account_deleted">Sadly for us, your account was successfully deleted!</string>
    <string name="you_have_signed_in">You have signed out successfully, see you next time!</string>

    <!-- Report form preferences -->
    <string name="to">To</string>
    <string name="admin_email">eldar101@gmail.com</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send_report_btn">Send Report</string>
    <string name="mailto">\"mailto:\"</string>

    <!-- favorite Preferences -->
    <string name="favorite_icon_title">favorite</string>
    <string name="hint_searchBox">Type the name of a game you want to play</string>
    <string name="favorites_title">My favorites</string>
    <string name="marketplace">Market</string>
    <string name="reviews">Reviews</string>
    <string name="ratings_reviews">Ratings and  Reviews</string>
    <string name="score">4.7</string>
    <string name="total_reviews_number">756,800</string>
    <string name="rate_this_game">Rate this game</string>
    <string name="tell_others_what_you_think">Tell others what you think</string>
    <string name="write_a_review">Write a review</string>
    <string name="add_to_favorites_button">add to favorites</string>
    <string name="users">users</string>
    <string name="favorites">favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="error_not_signed_in">Error: you are not signed in</string>
    <string name="name">name</string>
    <string name="img">img</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="error_user_not_signed_in">Error: user is not signed in</string>


    <!-- description and misc -->
    <string name="game_photo">game photo</string>

    <!-- Sign in preferences -->
    <string name="sign_out">Sign Out</string>
    <string name="account_photo">Account Photo</string>
    <string name="hi">Hi, &#160;</string>
    <string name="hello_sign">Hello sign</string>
    <string name="image_button">Image Button</string>
    <string name="review_fragment">Review Fragment</string>
    <string name="marketplace_fragment">Marketplace Fragment</string>
    <string name="favorites_button">Favorites Button</string>
    <string name="nav_host_fragment">Navigation host fragment</string>
    <string name="nav_view">Navigation view</string>
    <string name="drawer_layout">Drawer layout</string>
    <string name="main_activity">Main Activity</string>

    <!-- Sort menu Preferences -->
    <string name="min_age_desc">Minimal Age Desc.</string>
    <string name="min_age_asc">Minimal Age Asc.</string>
    <string name="release_year_desc">Release Year Desc.</string>
    <string name="releas_year_asc">Release Year Asc.</string>
    <string name="play_time_desc">Playing Time Desc.</string>
    <string name="play_time_asc">Playing Time Asc.</string>
    <string name="diff_desc">Difficulty Desc.</string>
    <string name="diff_asc">Difficulty Asc.</string>
    <string name="nameZtoA"><![CDATA[Name Z->A]]></string>
    <string name="nameAtoZ"><![CDATA[Name A->Z]]></string>
    <string name="no_reviews_label">No reviews yet, be the first to review!</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="david_park">David Park</string>
    <string name="no_ads_text">No ads in market for this game.</string>
    <string name="delete_button">Delete button</string>
    <string name="game_image">Game image</string>
    <string name="favorites_list_is_empty">Favorites list is empty.</string>
    <string name="my_ads_in_market">My ads in market</string>
    <string name="no_active_ads_in_market">No active ads in market</string>

    <!-- Market Preferences -->
    <string name="new_listing">New listing</string>
    <string name="fifty_dollars">$50</string>
    <string name="publish_date_text">Publishing date text</string>
    <string name="example_date">3/12/21</string>
    <string name="dot_divider">•</string>
    <string name="city_text">Tel Aviv</string>
    <string name="like_new">Like New</string>
    <string name="sell">Sell</string>
    <string name="payment_option">Payment option</string>
    <string name="contact">Contact</string>
    <string name="notes">Notes</string>
    <string name="publish_your_game">Publish your game</string>
    <string name="publish">Publish</string>
    <string name="select_trade_type">Select trade type</string>
    <string name="select_condition">Select Condition</string>
    <string name="city">City</string>
    <string name="price">Price</string>
    <string name="rental_fee">Rental fee</string>
    <string name="period">Period</string>
    <string name="payment_method">Payment method</string>
    <string name="cash">Cash</string>
    <string name="credit_card">Credit Card</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="contact_option">Contact option</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="write_review_dots">Write review …</string>

    <string-array name="trade_type_option">
        <item>Sell</item>
        <item>Rent</item>
        <item>Exchange</item>
    </string-array>

    <string-array name="game_condition_option">
        <item>New</item>
        <item>Like New</item>
        <item>Very Good</item>
        <item>Good</item>
        <item>Acceptable</item>
    </string-array>
    <string-array name="period_option">
        <item>Per Day</item>
        <item>Per Week</item>
        <item>Per Month</item>
    </string-array>
</resources>