<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/marketplace_fragment"
            android:icon="@drawable/ic_marketplace"
            android:title="@string/nav_marketplace_title" />
        <item
            android:id="@+id/my_games_fragment"
            android:icon="@drawable/ic_baseline_inventory_24"
            android:title="@string/nav_my_games_title" />
        <item
            android:id="@+id/my_account_fragment"
            android:icon="@drawable/ic_baseline_account_box_24"
            android:title="@string/nav_my_account_title" />

        <item
            android:id="@+id/faq_fragment"
            android:icon="@drawable/ic_baseline_help_center_24"
            android:title="@string/title_faq" />
    </group>
</menu>