<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.account_settings.SendReportFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/to"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/admin_email" />


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_round"
        android:hint="@string/subject"
        android:padding="10dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@drawable/bg_round"
        android:gravity="top"
        android:hint="@string/message"
        android:padding="10dp" />

    <Button
        android:id="@+id/bt_Send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/send_report_btn"
        android:textAllCaps="false"
        android:textSize="25sp" />


</androidx.appcompat.widget.LinearLayoutCompat>