<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/my_games_searchBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Search box"
        android:hint="@string/nav_my_games_title"
        android:inputType="text"
        android:textColor="@color/purple_200" />

    <TextView
        android:id="@+id/favorite_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@+id/my_games_searchBox"
        android:text="@string/favorites_title"
        android:textColor="@color/purple_200"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/no_games_in_favorites_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorites_list_is_empty"
        android:layout_below="@id/favorite_title"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favorites_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@id/favorite_title"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:scrollbars="horizontal"
        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        tools:listitem="@layout/item_game_in_favorite_list" />

    <TextView
        android:id="@+id/your_ads_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:gravity="center_horizontal"
        android:layout_below="@+id/favorites_recycler_view"
        android:text="@string/my_ads_in_market"
        android:textColor="@color/purple_200"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/no_ads_in_market_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_active_ads_in_market"
        android:layout_below="@id/your_ads_title"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ads_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/your_ads_title"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_listing_in_user_ads" />


</RelativeLayout>